# AlgoPipe

./: README.md  mkdocs.yml  pipeline.ipynb  pipeline.py  pyproject.toml
docs/: index.md
docs/algorithms/: random_forest.md
src/algopipe/: cli.py  cli_config.py  cli_wizard.py  generator.py  registry.py
src/algopipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/algopipe/modules/: __init__.py
src/algopipe/modules/DL_Algorithms/Basic_NN/: Backpropagation.py  Multi_Layer_Perceptron.py  Perceptron.py
src/algopipe/modules/DL_Algorithms/Convolutional_NN/: AlexNet.py  ConvNEXt.py  DenseNet.py  EfficientNet.py  GoogLeNet.py  LeNet.py  MobileNet.py  ResNet.py  VGGNet.py  VisionTransformers.py
src/algopipe/modules/Data_Loading/: Loaders.py
src/algopipe/modules/Data_Preprocessing/: Encoding_CategoricalData.py  Handling_MissingValues.py  Normalization.py  __init__.py
src/algopipe/modules/Data_Spliting/: train_test_split.py
src/algopipe/modules/Data_Summary/: column_types.py  missing_values.py  overview.py  statistics.py
src/algopipe/modules/Data_Visualization/: Bivariate_Analysis.py  Missing_Values_Visualization.py  Multivariate_Analysis.py  Pair_Plots.py  Univariate_Analysis.py
src/algopipe/modules/Evaluation_Metrics/: Classification_Metrics.py  Regression_Metrics.py
src/algopipe/modules/ReinforcementLearning_Algorithms/: Actor_Critic_Models.py  Deep_Q_Networks.py  MonteCarlo_TreeSearch.py  PolicyGradientMethods.py  Proximal_Policy_Optimization.py  Q_Learning.py  SARSA.py
(+51 files in other folders)
